[package]
name = "den"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"]}
futures = "0.3"
shiplift = "0.7"
reqwest = {version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
serde_yaml = "0.9"
gethostname = "0.4"
minijinja = "1.0.6"
time = { version = "0.3.27", features = ["serde", "formatting", "parsing"] }
openssl = { version = "0.10", features = ["vendored"] }
