[package]
name = "den"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"]}
futures = "0.3"
docker-api = "0.14.0"
reqwest = {version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
gethostname = "0.5"
minijinja = "2.0.3"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
openssl = { version = "0.10", features = ["vendored"] }
urlencoding = "2.1"
markdown = "0.3.0"
amiquip = "0.4.2"
mqtt-async-client = "0.3.1"
serde_yaml = "0.9.34"
