[package]
name = "docker-events-notifications"
version = "0.1.5"
edition = "2021"
description = "A daemon that listens to Docker events and sends notifications to multiple channels"
license = "MIT"

[[bin]]
name = "den"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["full"]}
futures = "0.3"
docker-api = "0.14.0"
reqwest = {version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time", "env-filter"] }
gethostname = "1.1"
minijinja = "2.21.0"
time = { version = "0.3.49", features = ["serde", "formatting", "parsing"] }
openssl = { version = "0.10", features = ["vendored"] }
urlencoding = "2.1"
markdown = "1.0.0"
amiquip = "0.4.2"
mqtt-async-client = "0.3.1"
serde_yaml = "0.9.34"
